--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
+@import url('https://fonts.googleapis.com/css?family=Poppins');
 body {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Poppins';
     background-color: #fff;
 }
 header > div#topnav {
@@ -50,7 +51,7 @@ header > div#topnav {
   }
 
   input[type=text] {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Poppins';
     border: none;
   }
 
@@ -76,7 +77,7 @@ header > div#topnav {
   }
 
   .search {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Poppins';
     font-size: 14px;
     background-color: #fb3e44;
     color: #fff;
@@ -157,7 +158,23 @@ header > div#topnav {
   }
 
   #bring_best h2 {
-    font-size: 2.2em;
-    line-height: 0em;
+    background-color: #ffebb5;
+    transform: skew(9deg,0deg);
+    font-size: 1.8em;
+    font-style: italic;
+    line-height: 1.3em;
+    padding: 0 45px;
   }
 
+  #bring_best p {
+    margin: 20px 25%;
+  }
+
+  #four_columns {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin-top: 50px;
+  }
