--- a/styles.css
+++ b/styles.css
@@ -178,3 +178,22 @@ header > div#topnav {
     text-align: center;
     margin-top: 50px;
   }
+
+
+
+
+  #createOrg {
+    margin: 70px 0;
+    display: flex;
+    align-items: center;
+  }
+
+  .createOrg {
+    text-align: center;
+    font-weight: bold;
+    background-color: #000;
+    padding: 15px 45px;
+    margin-left: 10px;
+    color: #fff;
+    box-shadow: 5px 5px #ece7e1;
+  }
